config/tekton/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  rules:
    - host: tekton-dashboard.ifontlabs.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: tekton-dashboard
              port:
                number: 9097
